--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>eog-web</title>
   </head>
-  <body>
+  <body style="background-color: rgb(0, 43, 54)">
     <div id="root"></div>
   </body>
 </html>
